[build-system]
requires = ["setuptools", "earthengine-api >=1.0.0", "geopandas"]
build-backend = "setuptools.build_meta"

[project]
name = "pb_gee_tools"
authors = [{name = "Pete Bunting", email = "petebunting@mac.com"}]
description = "A module with tools for supporting the use of the Google Earth Engine Python API and reducing work for repetitive or common tasks."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Landsat", "Sentinel-2", "Sentinel-1", "Google Earth Engine", "Remote Sensing", "Earth Observation"]
dynamic = ["version"]
[project.urls]

Homepage = "https://github.com/remotesensinginfo/pb_gee_tools"
Documentation = "https://pb-gee-tools.readthedocs.io"
Repository = "https://github.com/remotesensinginfo/pb_gee_tools.git"
Issues = "https://github.com/remotesensinginfo/pb_gee_tools/issues"
Changelog = "https://github.com/remotesensinginfo/pb_gee_tools/commits/main/"
